fix menu button icon visibility
e.g. open stylus on via FF @ https://addons.mozilla.org/en-US/firefox/

--- a/stylus-wardrobe.user.styl
+++ b/stylus-wardrobe.user.styl
@@ -487,6 +487,9 @@ bsh() { box-shadow: arguments }
     }
   }
 
+  // help menu blocked sites notice icon to bright
+  .menu-button-icon {
+    filter: invert(1) i
   }
 
   a {
